# Practical-Math-Library

./: CMakeLists.txt  LICENSE  PLM.sln  PML.sln  README.md
PLM/Core/: NamespaceMacros.h
include/PLM/Math/: MathConstants.h
include/PML/Core/: CMakeLists.txt  CPUDetector.h  CPUDispatcher.h  NamespaceMacros.h  aligned_allocator.h  aligned_array.h  aligned_vector.h  cross_intrin.h  exception_handler.h
include/PML/Math/: CMakeLists.txt  Constants.h  MathConstants.h  derivative.h  numeric_simd.h  pmath.h
include/PML/Math/numeric/: accumulate.h  adjacent_divide.h  inner_prod.h  positive_difference.h
include/PML/Math/numeric_simd/: accumulate.h  adjacent_divide.h  inner_prod.h  inner_product.h  positive_difference.h
include/PML/Utility/: CMakeLists.txt  CSVParser.h
include/gtest/: gtest.h
lib/googletest/Debug/: gtest_maind.lib
lib/googletest/MSVC_2017_Community/Debug/: gtest_maind.lib
lib/googletest/MSVC_2017_Community/Release/: gtest.lib  gtest_main.lib
lib/googletest/MSVC_2019_Community/x64/Debug/: gtest_maind.lib
lib/googletest/MSVC_2019_Community/x64/Release/: gtest_main.lib
lib/googletest/Release/: gtest.lib  gtest_main.lib
src/Core/: CMakeLists.txt  CPUDispatcher.cpp  Core.vcxproj  Core.vcxproj.filters  cross_intrin.cpp  exception_handler.cpp
src/Math/: CMakeLists.txt  Math.vcxproj  Math.vcxproj.filters  accumulate.cpp  inner_prod.cpp  numeric_simd.cpp  pmath.cpp
src/Math/numeric/: accumulate.cpp  adjacent_divide.cpp  inner_prod.cpp  positive_difference.cpp
src/Math/numeric_simd/: accumulate.cpp  adjacent_divide.cpp  inner_prod.cpp  inner_product.cpp  positive_difference.cpp
src/Tests/: CMakeLists.txt  TestConstants.cpp  TestCore.cpp  TestMathConstants.cpp  TestNumericSIMD.cpp  TestPMath.cpp  Tests.vcxproj  Tests.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h  targetver.h
src/Tests/TestCore/: TestCore.cpp  TestExceptionHandler.cpp
src/Tests/TestMath/: TestConstants.cpp  TestDerivative.cpp  TestNumericSIMD.cpp  TestPMath.cpp
src/Tests/TestUtility/: TestCSVParser.cpp  TestTable_ColumnKey.csv  TestTable_RowKey.csv
src/Utility/: CMakeLists.txt  CSVParser.cpp
